--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -1,8 +1,13 @@
 .sidebar-item {
   border-radius: 10px;
-  padding: 10px;
+  padding: 0.9rem;
   h1 {
-    font-size: 1.2rem;
+    font-size: 1rem;
+    padding: 0;
+    margin: 0;
+  }
+  p {
+    margin: 0;
   }
 }
 
