--- a/src/components/Note.scss
+++ b/src/components/Note.scss
@@ -1,3 +1,20 @@
 main {
   padding: 5rem 1rem 1rem 10rem;
 }
+
+.sidebar-item {
+  border-radius: 10px;
+  padding: 0.9rem;
+  h1 {
+    font-size: 1rem;
+    padding: 0;
+    margin: 0;
+  }
+  p {
+    margin: 0;
+  }
+}
+
+.selected {
+  background-color: #e8e7e4;
+}
