--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* line-height: 1.6; */
   font-size: 18px;
-  color: hsl(208, 10%, 20%);
+  color: #373530;
 }
 
 * {
