--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,3 +1,14 @@
+// https://sass-lang.com/documentation/at-rules/use --sass is so cool
+
 .focus {
   border: solid 1px rgb(143, 143, 143);
+}
+
+.push-right {
+  margin-left: auto;
+}
+
+@mixin vertical-center {
+  display: flex;
+  align-items: center;
 }
