--- a/src/pages/editor/NoteThumb.scss
+++ b/src/pages/editor/NoteThumb.scss
@@ -1,10 +1,7 @@
-main {
-  padding: 5rem 1rem 1rem 10rem;
-}
-
-.sidebar-item {
+.note-thumb {
   border-radius: 10px;
   padding: 0.9rem;
+
   h1 {
     font-size: 1rem;
     padding: 0;
