--- a/src/pages/editor/NotesBar.module.scss
+++ b/src/pages/editor/NotesBar.module.scss
@@ -1,6 +1,9 @@
-.notes-list {
+.notes-bar {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  gap: 1rem;
+  height: 100vh;
   padding: 0.9375rem;
   background-color: #f7f6f3;
 }
