--- a/src/pages/editor/NotesBar.scss
+++ b/src/pages/editor/NotesBar.scss
@@ -1,9 +1,9 @@
-.notes-bar {
+.notesBar {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 1rem;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0.9375rem;
   background-color: #f7f6f3;
 }
