--- a/src/pages/editor/Editor.scss
+++ b/src/pages/editor/Editor.scss
@@ -2,7 +2,12 @@
   display: flex;
 }
 
-.note {
+.noteContainer {
   padding: 1rem 0 0 1rem;
+  flex-grow: 1;
+}
+
+.note {
+  padding: 1rem 0 0 6rem;
   flex-grow: 1;
 }
