--- a/src/pages/editor/NoteThumb.scss
+++ b/src/pages/editor/NoteThumb.scss
@@ -2,6 +2,8 @@
   border-radius: 10px;
   padding: 0.9rem;
 
+  color: #72706c;
+
   h1 {
     font-size: 1rem;
     padding: 0;
@@ -9,9 +11,22 @@
   }
   p {
     margin: 0;
+
+    width: 10rem;
+    padding: 0;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    margin: 0 5px 0 5px;
+    text-align: center;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #000;
   }
 }
 
 .selected {
   background-color: #e8e7e4;
+  color: inherit;
 }
